Modernize GUI, Major rewrite of GUI, Add (almost) all remaining functionality for dipl.